added support for Java 8 and Circle CI 2.0