@@ -8,12 +8,12 @@
   <packaging>war</packaging>
   
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-    <google.client.version>1.19.1</google.client.version>
-    <appengine.api.version>1.9.18</appengine.api.version>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<google.client.version>1.23.0</google.client.version>
+		<appengine.api.version>1.9.63</appengine.api.version>
   </properties>
 
   <profiles>
@@ -58,51 +58,39 @@
 
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.2</version>
-        <configuration>
-          <fork>true</fork>
-          <compilerArguments>
-            <Xmaxerrs>5</Xmaxerrs>
-          </compilerArguments>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>com.google.code.echo-maven-plugin</groupId>
-        <artifactId>echo-maven-plugin</artifactId>
-        <version>1.0.0</version>
-        <inherited>false</inherited>
-        <executions>
-          <execution>
-            <id>execution-prod</id>
-            <goals>
-              <goal>echo</goal>
-            </goals>
-            <configuration>
-              <message>Use -Pprod to use production globals</message>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>com.google.appengine</groupId>
-        <artifactId>appengine-maven-plugin</artifactId>
-        <version>${appengine.api.version}</version>
-        <configuration>
-          <port>8888</port>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
-        <configuration>
-          <forkCount>3</forkCount>
-          <reuseForks>true</reuseForks>
-          <argLine>-XX:MaxJavaStackTraceDepth=5</argLine>
-        </configuration>
-      </plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<version>3.7.0</version>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<configuration>
+			<source>1.8</source>
+			<target>1.8</target>
+			<fork>true</fork>
+			<compilerArguments>
+				<Xmaxerrs>5</Xmaxerrs>
+			</compilerArguments>
+		</configuration>
+	  </plugin>
+	  <plugin>
+		<groupId>com.google.cloud.tools</groupId>
+		<artifactId>appengine-maven-plugin</artifactId>
+		<version>1.3.2</version>
+		<configuration>
+			<!-- deploy configuration -->
+			<enableJarClasses>false</enableJarClasses>
+			<port>8888</port>
+		</configuration>
+	  </plugin>
+	  <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>2.20.1</version>
+		<configuration>
+			<forkCount>3</forkCount>
+			<reuseForks>true</reuseForks>
+			<runOrder>alphabetical</runOrder>
+			<argLine>-XX:MaxJavaStackTraceDepth=5 -XX:MaxPermSize=512m -XX:PermSize=216m</argLine>
+		</configuration>
+	  </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
@@ -138,12 +126,12 @@
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-storage</artifactId>
-      <version>v1-rev28-${google.client.version}</version>
+      <version>v1-rev124-1.23.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-bigquery</artifactId>
-      <version>v2-rev193-${google.client.version}</version>
+      <version>v2-rev377-1.23.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.appengine</groupId>
